feat: Add Notion content fetching and rendering components
- Implemented fetch-notion script to retrieve data from Notion databases and save to JSON files.
- Created GlassButton component for reusable button styling.
- Developed NotionContent component to render Notion blocks dynamically.
- Added JSON files for projects and site configuration with relevant data.
- Included two new Notion pages with structured content in JSON format.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,14 @@ jobs:
           else
             npm install
           fi
-
+          
+      - name: Fetch Notion content
+        run: npm run fetch:notion
+        env:
+          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+          NOTION_PROJECT_DB_IDS: ${{ secrets.NOTION_PROJECT_DB_IDS }}
+          NOTION_SITE_DB_ID: ${{ secrets.NOTION_SITE_DB_ID }}
+          
       - name: Build
         run: npm run build
 
