--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -5,15 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "fetch:notion": "node scripts/fetch-notion.mjs",
     "build": "vite build",
     "preview": "vite preview --strictPort --port 4173"
   },
   "dependencies": {
+    "notion-client": "^7.4.3",
+    "notion-utils": "^7.4.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-notion-x": "^7.4.3"
   },
   "devDependencies": {
+    "@notionhq/client": "^4.0.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "vite": "^7.0.0"
   },
   "engines": {
