--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "notion-client": "^7.4.3",
     "notion-utils": "^7.4.3",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-notion-x": "^7.4.3"
